--- a/.htaccess
+++ b/.htaccess
@@ -1,6 +1,6 @@
 <IfModule mod_rewrite.c>
 RewriteEngine On
-#RewriteRule http-poll/ http://zatemas.zrs.hr:5280/http-poll/ [P]
+RewriteRule z-http-bind/ http://zatemas.zrs.hr:5280/http-bind/ [P,L]
 
 RewriteRule http-bind/ http://%{SERVER_NAME}:5280/http-bind/ [P]
 </IfModule>
